--- a/components/css/PrintButton.css
+++ b/components/css/PrintButton.css
@@ -3,7 +3,6 @@
   border-radius: 10px;
   position: absolute;
   width: fit-content;
-  place-items: center;
   right: 5rem;
   padding: 0.5rem 1rem;
   background-color: var(--background);
